# NotebookCV

./: .gitignore  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
NotebookCV/: _modidx.py  core.py  document.py  document2.py  example.py  mapper.py  render.py
nbs/: .sesskey  00_core.ipynb  01_document.ipynb  02_document.ipynb  02_mapper.ipynb  03_document.ipynb  03_render.ipynb  04_document.ipynb  debug.html  index.ipynb  lom_nb.ipynb  nbdev.yml  tasks_to_do.ipynb
templates/: cv2_fr.css  cv_fr.css  cv_fr.html  terminal.css
