[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "NotebookCV"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "suvam", email = "fmahuyac@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/suvambh/NotebookCV"
Documentation = "https://suvambh.github.io/NotebookCV/"

[project.entry-points.nbdev]
NotebookCV = "NotebookCV._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "NotebookCV.__version__"}

[tool.setuptools.packages.find]
include = ["NotebookCV"]

[tool.nbdev]
